Mark org apache commons logging package as optional import in OSGi metadata

--- a/hazelcast-all/pom.xml
+++ b/hazelcast-all/pom.xml
@@ -100,6 +100,7 @@
                                             org.apache.log4j.*;resolution:=optional,
                                             org.apache.logging.log4j;resolution:=optional,
                                             org.apache.logging.log4j.*;resolution:=optional,
+                                            org.apache.commons.logging;resolution:=optional,
                                             javax.script.*;resolution:=optional,
                                             org.jclouds.*;resolution:=optional,
                                             com.google.*;resolution:=optional
