--- a/hazelcast-spring/pom.xml
+++ b/hazelcast-spring/pom.xml
@@ -97,6 +97,7 @@
                                     org.apache.logging.log4j;resolution:=optional,
                                     org.apache.logging.log4j.*;resolution:=optional,
                                     org.slf4j;resolution:=optional,
+                                    org.apache.commons.logging;resolution:=optional,
                                     com.hazelcast.client;resolution:=optional,
                                     com.hazelcast.hibernate;resolution:=optional,
                                     *
